[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/back_to_main.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DWARVESC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://UI/CharacterSelectBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/OpenSans-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Music/MarchOfSpoon(SelectScreen).wav" type="AudioStream" id=6]
[ext_resource path="res://UI/Crusader.png" type="Texture" id=7]
[ext_resource path="res://Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sounds/Click.wav" type="AudioStream" id=9]
[ext_resource path="res://UI/DONOTUSE.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 45
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxLine" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
color = Color( 0.560784, 0.0470588, 0.431373, 1 )
grow = 1.0
thickness = 1
vertical = true

[sub_resource type="DynamicFont" id=6]

size = 45
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxLine" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
color = Color( 0.5625, 0.0505371, 0.434509, 1 )
grow = 1.0
thickness = 1
vertical = false

[sub_resource type="Animation" id=8]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0664062, 0.000259399, 0.0436683, 0 ), Color( 0.0664062, 0.000259399, 0.0436683, 0.906078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect/Yes:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect/No:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CrusadeSelection" type="Control" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -183.0
margin_top = 50.0
margin_right = 183.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.712353, 0.0660095, 0.804688, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Crusade Mode"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="PlayerSelectRows" parent="." index="1" instance=ExtResource( 3 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 170.0
margin_right = 120.0
margin_bottom = 170.0

[node name="BackToMain" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -91.0
margin_top = 650.0
margin_right = 90.0
margin_bottom = 691.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fuck! Go Back!"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Pause", "custom_fonts" ]

[node name="Instruct" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -231.0
margin_top = 101.0
margin_right = 231.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Pick Your Alt-Right Illuminati Crusader!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -9.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="ColorRect" type="ColorRect" parent="." index="5"]

visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -640.0
margin_top = 170.0
margin_right = 640.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0664062, 0.000259399, 0.0436683, 0 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Sprite" type="Sprite" parent="ColorRect" index="0"]

modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.618784 )
position = Vector2( 310, 200 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="ColorRect" index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -268.5
margin_right = 268.5
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "My, Look At The Time!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Yes" type="Button" parent="ColorRect" index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -69.0
margin_top = 100.0
margin_right = 69.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Begin"
flat = true
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="No" type="Button" parent="ColorRect" index="3"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -69.0
margin_top = 190.0
margin_right = 69.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Nope"
flat = true
align = 1
_sections_unfolded = [ "Visibility", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/confirm_fade = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="SelectSound" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = -9.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Profiles" parent="." index="8" instance=ExtResource( 10 )]

anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -640.0
margin_right = 640.0
margin_bottom = 720.0

[connection signal="focus_entered" from="PlayerSelectRows" to="." method="_on_PlayerSelectRows_focus_entered"]

[connection signal="pressed" from="BackToMain" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="ColorRect/Yes" to="." method="_on_Yes_pressed"]

[connection signal="pressed" from="ColorRect/No" to="." method="_on_No_pressed"]


